--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain>=0.3.21",
     "langchain-ollama>=0.3.0",
     "pydantic-settings>=2.8.1",
+    "python-dotenv>=1.0.1",
 ]
 
 [dependency-groups]
